# gold_framework

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
demo/: game.cpp  game.h  main.cpp
demo/scripts/: .platforms.lua.kate-swp  circle.lua  pingpong.lua  platforms.lua  playerinput.lua  random.lua
gold/: camera.cpp  camera.h  entity.cpp  entity.h  error_code.h  gold.h  input.cpp  input.h  memory.cpp  memory.h  scriptmanager.cpp  scriptmanager.h
gold/graphics/: graphics_device.cpp  graphics_device.h  mesh.cpp  mesh.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h
gold/graphics/model/: factory.h  model.cpp  model.h  model_type.h
gold/graphics/model/primitives/: cube.cpp  cube.h  factory.cpp  factory.h  skybox.cpp  skybox.h
gold/shaders/: cube_frag.glsl  cube_vert.glsl  plane_frag.glsl  sky_frag.glsl  sky_vert.glsl
gold/util/: assert.h  balanced_map.h  file.h  light.h  macros.h  matrix.h  random.h  string.h  time.h  util.h  vector.h  vector3.h  vertex.h
